2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs: Implemented Bug 354129 - Auto add
	  second brackets, quotation mark.

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/Document.cs:
	  Implemented Bug 313786 - New editor needs to handle cr/lf issues,
	  encoding.

2008-02-04  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs: Implemented Bug 323946 - Undo/Redo
	  functionality are not context sensitive.

2008-02-03  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs, Mono.TextEditor/LineSplitter.cs,
	  Mono.TextEditor/IBuffer.cs, Mono.TextEditor/LineSegmentTree.cs: Fixed
	  reload bug.

2008-02-03  Mike Krüger <mkrueger@novell.com> 

	* TangoStyle.xml: Changed literal color in tango style.

2008-02-03  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.mdp, Makefile.am: bookmark.png wasn't a resource ?

2008-02-03  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs: Insert/Remove Indent now works
	  without selection.

2008-02-03  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/TextEditorData.cs:
	  Some changes to remove code duplication.

2008-02-03  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/TextEditorData.cs:
	  Fixed Insert/Remove tab selection range bug.

2008-02-03  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs, Mono.TextEditor/BookmarkMargin.cs: Some
	  changes for the splitting feature.

2008-02-03  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/LineSplitter.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor/GutterMargin.cs: Gutter redraws on width changes.

2008-02-03  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/LineSplitter.cs: Added some safety checks.

2008-02-01  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Fixed bug.
